# BaSiCPy

./: pyproject.toml
misc_notebooks/: example-use-3d-chick.ipynb
